0.4.1   11 May 2011
- Support vundle-style short repo names thanks to Chris Toomey

0.4.0   06 Mar 2011
- Greatly simplify path configuration thanks to Sorin Ionescu
- No longer use Ruby as config file format, it's just key=value now
  ("static=1" still works but it's $HOME instead of "#{ENV['HOME']}")
- Add the Static: directive thanks to Andreas Marienborg
- Remove submodule entries from .gitmodules and .git/config (also Sorin)

0.3.1   30 Oct 2010
- restore Ruby 1.8 compatibility (popen doesn't accept an array)
- promise to check rvm before releasing

0.3     29 Oct 2010
- added submodule support thanks to steeef.
- support putting .vim and .vimrc in custom locations using config options.
- every repo now automatically ignores doc/tags.
- BUNDLE and BUNDLE-COMMAND are now case-insensitive.
- If a BUNDLE-COMMAND fails, vim-update-bundles now exits immediately.

0.2     27 Oct 2010
- Added a pure ruby configuration file, ~/vim-update-bundles.rb
- Don't clean ".vim" from repo names. a.vim is "a.vim" and not just "a".
- Added verbose flag. Run ./vim-update-bundles --verbose=1 to hear everything.
- bugfix: repos weren't automatically fast-forwarding to the latest commit.
- added command line args: ./vim-update-bundles vimrc="$HOME/dots/vimrc"
  but they're not very useful in real life, only for testing.
- added some tests! "rake test" in the git repo to run them.
- created a changes file.
